<resources>
    <string name="app_name">AssignmentMobileApp</string>
    <string name="title_activity_quiz_questions">QuizQuestionsActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_cheat">CheatActivity</string>
    <string name="cheat_activity_label">Cheat</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="finish_text_QQA">FINISH</string>
    <string name="submit_text_QQA">SUBMIT</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="exit">EXIT</string>
    <string name="history">History</string>
    <string name="reset">RESET</string>
    <string name="image">image</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="result">RESULT</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="value">VALUE</string>
    <string name="none">none</string>
    <string name="review">REVIEW</string>
    <string name="total_cheats">Total Cheats:</string>
    <string name="answered">Answered:</string>
    <string name="total_score">Total Score:</string>
    <string name="summary">SUMMARY</string>
    <string name="total_questions">Total Questions:</string>
    <string name="logo">Logo</string>
    <string name="start">START</string>
    <string name="geoquiz">GeoQuiz</string>
    <string name="unearth_knowledge_one_quiz_at_a_time">Unearth Knowledge, One Quiz at a Time</string>
    <string name="cheat">Cheat</string>
    <string name="submit">SUBMIT</string>
    <string name="hint">Hint</string>
    <string name="cheat_tokens_3">Cheat Tokens: 3</string>
    <string name="this_is_a_hint">This is a hint.</string>
    <string name="todo">TODO</string>
    <string name="_0_10">0/10</string>
</resources>